--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
               <input type="number" name="question6" placeholder="Введите число">
               <div class="feedback"></div>
             </div>
-            <button type="submit">Проверить ответы</button>
+            <button id="checkTestButton" type="submit">Проверить ответы</button>
             <div id="result"></div>
           </div>
         </form>
